--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=cafemanagement7
+spring.application.name=cafemanagement
 
 # ===================== ?????? ?? =====================
-spring.datasource.url=jdbc:mysql://localhost:3306/cafemanagement7
+spring.datasource.url=jdbc:mysql://localhost:3306/cafemanagement
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
