--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=cafemanagement9
+spring.application.name=cafemanagement
 
 # ===================== ?????? ?? =====================
-spring.datasource.url=jdbc:mysql://localhost:3306/cafemanagement9
+spring.datasource.url=jdbc:mysql://localhost:3306/cafemanagement
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework=INFO
 logging.level.com.example.cafemanagement=DEBUG
 
-# ========SMP==========
+# ========SMTP==========
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=leejm9630@gmail.com
